SLING-4546 - Sightly: Improper handling of extension and selectors by data-sly-resource
- Improved selector extraction for resource path (taking extensions into consideration)
- Added selectors from path or parent to dispatcher options so they will no longer be ignored
- Updated testing content and integration tests

--- a/contrib/scripting/sightly/testing-content/src/main/resources/SLING-INF/apps/sightly/scripts/text/text.html
+++ b/contrib/scripting/sightly/testing-content/src/main/resources/SLING-INF/apps/sightly/scripts/text/text.html
@@ -16,18 +16,5 @@
   ~ specific language governing permissions and limitations
   ~ under the License.
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Sightly data-sly-resource - Sling implementation</title>
-</head>
-<body>
-<div id="selectors" data-sly-resource="${'/sightly/includedresource' @ selectors=['a', 'b']}"></div>
-<div id="selectors-remove-c" data-sly-resource="${'/sightly/includedresource.a.b.c.html' @ selectors=['a', 'b']}"></div>
-<div id="removeselectors-remove-b" data-sly-resource="${'/sightly/includedresource.a.b.c.html' @ removeSelectors=['b']}"></div>
-<div id="addselectors" data-sly-resource="${'/sightly/includedresource' @ addSelectors=['a', 'b', 'c']}"></div>
-<div id="dot-include" data-sly-resource="${ '.' @ selectors='dot'}"></div>
-<div id="extension-selectors" data-sly-resource="${'/sightly/text.a.b.txt'}"></div>
-<div id="extension-replaceselectors" data-sly-resource="${'/sightly/text.a.b.txt' @ selectors=['c']}"></div>
-</body>
-</html>
+<span class="path">path: ${resource.path}</span><br>
+<span class="selectors">selectors: ${request.requestPathInfo.selectorString}</span>
